# mod-spider

./: .eslintrc.cjs  .gitignore  .npmrc  README.md  auto-imports.d.ts  mod-planner.code-workspace  mod-spider.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1693415995939-9bc680e7bd1c3.mjs
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
Kanban/: Add & Remove mod groups.md  Change  replace _after_  with  replace _before_  and allow the action on expanded folders.md  General.md  Implement mod detail editing view.md  Moving a group into it's parent causes other groups to break.md  The second child moved will not move correctly.md
Kanban/Milestones/: Code Cleanup.md  Create a new Mod Plan.md  Mod Plan Persistence.md
src/: App.svelte  app.d.ts  main.ts
src-art/: chrome_icons.afdesign  skyrim_coverart.afphoto
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window_with_initscript.rs
src/!_scss/: base.scss
src/!_scss/theme/: colours.scss  gradients.scss  index.scss
src/adapter/: Nexusmods.ts  scopedLocalStorage.ts
src/lib/: Mod.ts  ModHelper.ts  Plan.ts  Reference.ts  Serialize.ts  UtilityTypes.ts  ViralStore.ts  db.ts  parseNexusModpage.ts
src/lib/!!_DEPRECATED/: GenericWebMod.ts  Mod.ts  ModHelper.ts  Nexusmods.ts  Plan.ts  Serialize.ts  scopedLocalStorage.ts
src/lib/Dexie/: DexieStore.ts  DexieUtils.ts  database.ts
src/lib/adapter/: GenericWebMod.ts  Nexusmods.ts  scopedLocalStorage.ts
src/lib/app/: Context.ts  application_context.ts
src/lib/beercss/: theme-override.scss
src/lib/components/: Foldout.svelte  ImageCover.svelte  ModSearchComponent.svelte  Symbol.svelte  Titlebar.svelte
src/lib/compontents/: IconButton.svelte  ModSearchComponent.svelte
src/lib/database/: db.ts
src/lib/meta/: metadata.ts  serializable.test.ts  serializable.ts
src/lib/modal/: module.ts
src/lib/router/: Breadcrumbs.svelte  Navigate.svelte  RouterFrame.svelte  module.ts
src/lib/svelte/: transitions.ts
src/lib/tauri/: fsHelpers.ts
src/lib/util/: StoreProxy.ts  Utility.ts  UtilityTypes.ts  guid.ts  serializable.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  Chrome.svelte  ChromeTitlebar.svelte
src/routes/(planner)/: +layout.svelte  (+2 more)
src/scss/: colours.scss  core.scss  fonts.scss  global.scss  modal.scss  theme.scss
src/views/: HelloWorld.svelte  routes.ts
(+128 files in other folders)
