[package]
name = "diresoft_mod_master"
version = "0.1.0"
description = "An app for mod planning"
authors = []
license = ""
repository = ""
default-run = "diresoft_mod_master"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
features = ["sqlite"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
