[package]
name = "diresoft_mod_spider"
version = "0.1.0"
description = "An app for mod planning"
authors = []
license = ""
repository = ""
default-run = "diresoft_mod_spider"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["api-all"] }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
